--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@ Plot 6 - <br>16th street -3rd Neighborhood - District 8
 <br>6 of October City - Giza - Egypt</b>
 </font>
 <br><br>
-<a href="home.htm">
+<a href="index.html">
 <img src="download.jpg" height="200" width="400"">
 <br>Home page</a>&nbsp;&nbsp;</b>
 <br><br>
