--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@ Plot 6 - <br>16th street -3rd Neighborhood - District 8
 <img src="download.jpg" height="200" width="400"">
 <br>Home page</a>&nbsp;&nbsp;</b>
 <br><br>
-<a href="file:///C:/Users/HP/Documents/Prep.2.html">Home page</a>
+<a href="file:///C:/Users/HP/Documents/index.html">Home page</a>
 </center>
 </body>
 </html>
