--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Prep 2:
 
 <br>
 <a href="Prep.2.html">Home Page</a>&nbsp;&nbsp;
-<a href="about school.html">about school</a>&nbsp;&nbsp
+<a href="index1.html">about school</a>&nbsp;&nbsp
 <a href="Gallary.html">Gallary</a>&nbsp;&nbsp;
 <a href="Vision.html">vision & Message</a>&nbsp;&nbsp;
 <a href="Message.html">ChatAI</a>&nbsp;&nbsp;
