--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <img src="file:///C:/Users/HP/Documents/png-clipart-emoji-doing-thumbs-up-illustration-emoji-emoticon-smiley-like-button-thumb-signal-double-happiness-computer-icons-text-messaging.png" height="200" width="400" align="right">
 </head>
 <body background="https://yt3.googleusercontent.com/ytc/AIdro_kItgretV7nx-6i1J14MwRkzkANipKlArlodexNS-1sTZk=s900-c-k-c0x00ffffff-no-rj">
-<img src="images.png" height ="100" width ="800" ;align ="top">
+<img src="file:///C:/Users/HP/Downloads/images-removebg-preview.png" height ="100" width ="800" ;align ="top">
 <font face="Arial" color="red"size="6">
 </font>
 <center>
