--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ Prep 2:
 </html
 </center> <Font face ="Arial" color="blue" size="4">
 <p><font color="00FF00">
-<h1> Welcome: to the website, This Website is only for prep 2. 
+<h1> <p>  Welcome: to the website, This Website is only for prep 2. 
 This website can assist help of many math lessons of each unit on math.
 if u have any questions to ask. Chat with The Ai.
-You can use the Upstudy app to answer questions in questions, or downloading a calculator could help or just buying.</h1>
+You can use the Upstudy app to answer questions in questions, or downloading a calculator could help or just buying.</h1> </p>
 <br>
 <font face ="Lato" color="#017bf5" size="7">
 <a href="https://www.youtube.com/channel/UC352bfu_Ur-b7FqQiozS1Yg">Private Math Lessons In youtube</a>
