--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ This website can assist help of many math lessons of each unit on math.
 if u have any questions to ask. Chat with The Ai.
 You can use the Upstudy app to answer questions in questions, or downloading a calculator could help or just buying.</h1> </p>
 <br>
-<font face ="Lato" color="#017bf5" size="2">
+<font face ="Lato" color="#017bf5">
 <a href="https://www.youtube.com/channel/UC352bfu_Ur-b7FqQiozS1Yg">Private Math Lessons In youtube</a>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 <div>
