--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
 <body bgcolor="powderedblue""" dir="ltr
 <center>
 <font face="Arial" color ="red"size="6">
-<h1>about school</h1><br></Center>
+<center><h1>About Website</h1><br></Center>
 <b>
 
 <center>
