--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1 align="right"><a href="login.html">Login</a></h1>
 <img src="file:///C:/Users/HP/Documents/images-removebg-preview.png" height="200" width="400" align="right">
 </head>
-<body background="https://yt3.googleusercontent.com/ytc/AIdro_kItgretV7nx-6i1J14MwRkzkANipKlArlodexNS-1sTZk=s900-c-k-c0x00ffffff-no-rj">
+<body background="stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566">
 <img src="images-removebg-preview.png" height ="100" width ="800" ;align ="top">
 <font face="Arial" color="red"size="6">
 </font>
