--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <img src="file:///C:/Users/HP/Documents/images-removebg-preview.png" height="200" width="400" align="right">
 </head>
 <body background="file:///C:/Users/HP/Documents/stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566.jpg">
-<img src="images-removebg-preview.png" height ="100" width ="800" ;align ="top">
+<img src="file:///C:/Users/HP/Documents/stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566.jpg" height ="100" width ="800" ;align ="top">
 <font face="Arial" color="red"size="6">
 </font>
 <center>
