--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <dir="rtl">
 <img src="file:///C:/Users/HP/Documents/images-removebg-preview.png" height="200" width="400" align="right">
 </head>
-<body background="linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);">
+<body background="https://www.shutterstock.com/shutterstock/photos/2023251566/display_1500/stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566.jpg">
 <img src="file:///C:/Users/HP/Documents/stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566.jpg" height ="100" width ="800" ;align ="top">
 <font face="Arial" color="red"size="6">
 </font>
