--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <Head>
 <title> Private Math Lessons </title>
 <dir="rtl">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div class="main">
+        <div class="navbar">
+            <div class="icon">
+                <h2 class="logo">Prep 2</h2>
+            </div>
 <img src="file:///C:/Users/HP/Documents/images-removebg-preview.png" height="200" width="400" align="right">
 </head>
 <body background="https://www.shutterstock.com/shutterstock/photos/2023251566/display_1500/stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566.jpg">
