--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
             <div class="icon">
                 <h2 class="logo">Prep 2</h2>
             </div>
+.navbar{
+    width: 1200px;
+    height: 75px;
+    margin: auto;
+}
+            
 <img src="file:///C:/Users/HP/Documents/images-removebg-preview.png" height="200" width="400" align="right">
 </head>
 <body background="https://www.shutterstock.com/shutterstock/photos/2023251566/display_1500/stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566.jpg">
