--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <dir="rtl">
 </head>
 <body>
-
+ <link rel="stylesheet" href="2.css">
     <div class="main">
         <div class="navbar">
             <div class="icon">
