--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
             <div class="icon">
                 <h2 class="logo">Prep 2</h2>
             </div>
-            
+
+   <div class="menu">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="index1.html">ABOUT</a></li>
+                    <li><a href="message.html">MathAi</a></li>
+                    <li><a href="Geometry.html">Videos</a></li>
+                    <li><a href="Quiz.html">Quiz</a></li>
+                </ul>
+            </div>
 <img src="file:///C:/Users/HP/Documents/images-removebg-preview.png" height="200" width="400" align="right">
 </head>
 <body background="https://www.shutterstock.com/shutterstock/photos/2023251566/display_1500/stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566.jpg">
