--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <div class="search">
                 <input class="srch" type="search" name="" placeholder="Type To text">
                 <a href="index.html">Home</a> <button class="btn">Search</button></a>
+            <a href="index1.html">About</a> <button class="btn">Search</button></a>
             </div>
 </head>
 <body background="https://www.shutterstock.com/shutterstock/photos/2023251566/display_1500/stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566.jpg">
