--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
                 <input class="srch" type="search" name="" placeholder="Type To text">
                 <a href="index.html"><button class="btn">Search</button></a>
             </div>
+         <div class="content">
+            <h1>Web Design & <br><span>Development</span> <br>Course</h1>
+            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
+                 expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
+                <br> a quae totam ipsa illum minus laudantium?</p>
+
+                <button class="cn"><a href="#">JOIN US</a></button>
 </head>
 <body background="https://www.shutterstock.com/shutterstock/photos/2023251566/display_1500/stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566.jpg">
 <font face="Arial" color="red"size="6">
