--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
                     <p class="link">Don't have an account<br>
                     <a href="#">Sign up </a> here</a></p>
                     <p class="liw">Log in with</p>
+            <div class="icons">
+                        <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                        <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                        <a href="#"><ion-icon name="logo-google"></ion-icon></a>
+                        <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
+                    </div>
+
+                </div>
+                    </div>
+                </div>
+        </div>
+    </div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </head>
 <body background="https://www.shutterstock.com/shutterstock/photos/2023251566/display_1500/stock-vector-vector-design-templates-for-maths-in-simple-modern-style-with-line-school-elements-cover-for-a-2023251566.jpg">
 <font face="Arial" color="red"size="6">
