--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
           <div class="search">
                 <input class="srch" type="search" name="" placeholder="Type To text">
                 <a href="index.html"><button class="btn">Search</button></a>
-            </div>
-         <div class="content">
+          </div>
+           </div> 
+        <div class="content">
             <h1>Web Design & <br><span>Development</span> <br>Course</h1>
             <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
                  expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
                 <br> a quae totam ipsa illum minus laudantium?</p>
 
                 <button class="cn"><a href="#">JOIN US</a></button>
-          <div class="form">
+
+                <div class="form">
                     <h2>Login Here</h2>
                     <input type="email" name="email" placeholder="Enter Email Here">
                     <input type="password" name="" placeholder="Enter Password Here">
@@ -41,7 +43,8 @@
                     <p class="link">Don't have an account<br>
                     <a href="#">Sign up </a> here</a></p>
                     <p class="liw">Log in with</p>
-            <div class="icons">
+
+                    <div class="icons">
                         <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
@@ -55,3 +58,5 @@
         </div>
     </div>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+</body>
+</html>
