--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           </div>
            </div> 
         <div class="content">
-            <h1>Web Design & <br><span>Development</span> <br>Course</h1>
-            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
-                 expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
-                <br> a quae totam ipsa illum minus laudantium?</p>
+            <h1>Algebra & <br><span>Geometry Math</span> <br>Course</h1>
+            <p class="par">This Is For Prep 2 And This Could Provide Assistance Of This WebPage
+            If You Want To Learn About This, You Can Access The Videos Tab On The Top Of The Webpage
+            Once You're Completed of The Videos U Learned, Go Access To The Quiz Tab, And Have A Good Day.</p>
 
                 <button class="cn"><a href="#">JOIN US</a></button>
 
