--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>Algebra & <br><span>Geometry Math</span> <br>Course</h1>
             <p class="par">This Is For Prep 2 And This Could Provide Assistance Of This WebPage.
             If You Want To<br> Learn About This,<br> You Can Access The Videos Tab On The Top Of The Webpage.
-            Once You're Completed of The Videos U Learned
+            Once<br> You're Completed of The Videos U Learned
             ,<br> Go Access To The Quiz Tab, And Have A Good Day.</p>
 
                 <button class="cn"><a href="#">JOIN US</a></button>
