--- a/index1.html
+++ b/index1.html
@@ -2,11 +2,13 @@
 <head>
 <title> Math Lessons </title>
 </head>
-<body bgcolor="powderedblue""" dir="ltr
-<center>
-<font face="Arial" color ="red"size="6">
-<center><h1>About Website</h1><br></Center>
-<b>
+<body>
+  <link rel="stylesheet" href="5.css">
+    <div class="main">
+        <div class="navbar">
+            <div class="icon">
+                <h2 class="logo">Prep 2</h2>
+            </div>
 
 <center>
 Telephone:-01156945903 - 01156945904<br>
