--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <head>
 <title> Math Lessons </title>
 </head>
-<body>
+<body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg">
   <link rel="stylesheet" href="5.css">
     <div class="main">
         <div class="navbar">
