--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title> Private Math Lessons </title>
 <dir="rtl">
 </head>
-<body>
+<body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg">
  
  <link rel="stylesheet" href="2.css">
     <div class="main">
