--- a/index1.html
+++ b/index1.html
@@ -10,15 +10,13 @@
                 <h2 class="logo">Prep 2</h2>
             </div>
 
-<center>
-Telephone:-01156945903 - 01156945904<br>
-Fax:38892953Mobile: 012 8 503 6 503<br>
-Hot Net: 1606.tel
-<br>E-mail : info@alkhalilschools.net
-Plot 6 - <br>16th street -3rd Neighborhood - District 8
-<br>6 of October City - Giza - Egypt</b>
-</font>
-<br><br>
+ <div class="content">
+            <h1>Algebra & <br><span>Geometry Math</span> <br>Course</h1>
+            <p class="par">This Is For Prep 2 And This Could Provide Assistance Of This WebPage.
+            If You Want To<br> Learn About This,<br> You Can Access The Videos Tab On The Top Of The Webpage.
+            Once<br> You're Completed of The Videos U Learned
+            ,<br> Go Access To The Quiz Tab, And Have A Good Day.</p>
+  
 <a href="index.html">
 <img src="download.jpg" height="200" width="400"">
 <br>Home page</a>&nbsp;&nbsp;</b>
