--- a/index1.html
+++ b/index1.html
@@ -16,6 +16,7 @@
             If You Want To<br> Learn About This,<br> You Can Access The Videos Tab On The Top Of The Webpage.
             Once<br> You're Completed of The Videos U Learned
             ,<br> Go Access To The Quiz Tab, And Have A Good Day.</p>
+   <dir="rtl">
    <h2><a href="Prep.2.html">Home Page</a></h2>
   
 <a href="index.html">
