--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,8 @@
 <head>
 <title> Math Lessons </title>
 </head>
-<body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg">
+<body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg " dir="ltr">
+  <h2><a href="index.html">Home Page</a></h2>
   <link rel="stylesheet" href="5.css">
     <div class="main">
         <div class="navbar">
