--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,15 @@
             <div class="icon">
                 <h2 class="logo">Prep 2</h2>
             </div>
+             <div class="menu">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="index1.html">ABOUT</a></li>
+                    <li><a href="message.html">MathAi</a></li>
+                    <li><a href="Geometry.html">Videos</a></li>
+                    <li><a href="Quiz.html">Quiz</a></li>
+                </ul>
+            </div>
 
  <div class="content">
             <h1>Algebra & <br><span>Geometry Math</span> <br>Course</h1>
