--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,7 @@
-<html>
+<html lang="en">
 <head>
 <title> Math Lessons </title>
+  <dir="rtl">
 </head>
 <body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg " dir="ltr">
   <h2><a href="index.html">Home Page</a></h2>
