--- a/index1.html
+++ b/index1.html
@@ -3,8 +3,8 @@
 <title> Math Lessons </title>
   <dir="rtl">
 </head>
-<body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg " dir="ltr">
-  <h2><a href="index.html">Home Page</a></h2>
+<body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg>
+  
   <link rel="stylesheet" href="5.css">
     <div class="main">
         <div class="navbar">
@@ -14,7 +14,6 @@
              <div class="menu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="index1.html">ABOUT</a></li>
                     <li><a href="message.html">MathAi</a></li>
                     <li><a href="Geometry.html">Videos</a></li>
                     <li><a href="Quiz.html">Quiz</a></li>
