--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,8 @@
             <div class="icon">
                 <h2 class="logo">Prep 2</h2>
             </div>
-             <div class="menu">
+          
+          <div class="menu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="message.html">MathAi</a></li>
@@ -19,6 +20,8 @@
                     <li><a href="Quiz.html">Quiz</a></li>
                 </ul>
             </div>
+
+             <button class="cn"><a href="#">JOIN US</a></button>
 
  <div class="content">
             <h1>Algebra & <br><span>Geometry Math</span> <br>Course</h1>
