--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,9 @@
 <html lang="en">
 <head>
 <title> Math Lessons </title>
-  <dir="rtl">
+<dir="rtl">
 </head>
-<body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg>
+<body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg">
   
   <link rel="stylesheet" href="5.css">
     <div class="main">
