--- a/index1.html
+++ b/index1.html
@@ -5,24 +5,28 @@
 </head>
 <body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg">
   
-  <link rel="stylesheet" href="5.css">
+ <link rel="stylesheet" href="2.css">
     <div class="main">
         <div class="navbar">
             <div class="icon">
                 <h2 class="logo">Prep 2</h2>
             </div>
-          
-          <div class="menu">
+
+   <div class="menu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
+                    <li><a href="index1.html">ABOUT</a></li>
                     <li><a href="message.html">MathAi</a></li>
                     <li><a href="Geometry.html">Videos</a></li>
                     <li><a href="Quiz.html">Quiz</a></li>
                 </ul>
             </div>
-
-
- <div class="content">
+          <div class="search">
+                <input class="srch" type="search" name="" placeholder="Type To text">
+                <a href="index.html"><button class="btn">Search</button></a>
+          </div>
+           </div> 
+        <div class="content">
             <h1>Algebra & <br><span>Geometry Math</span> <br>Course</h1>
             <p class="par">This Is For Prep 2 And This Could Provide Assistance Of This WebPage.
             If You Want To<br> Learn About This,<br> You Can Access The Videos Tab On The Top Of The Webpage.
@@ -30,7 +34,6 @@
             ,<br> Go Access To The Quiz Tab, And Have A Good Day.</p>
 
                 <button class="cn"><a href="#">JOIN US</a></button>
-  
 </center>
 </body>
 </html>
