--- a/index1.html
+++ b/index1.html
@@ -15,9 +15,8 @@
    <div class="menu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="index1.html">ABOUT</a></li>
                     <li><a href="message.html">MathAi</a></li>
-                    <li><a href="Geometry.html">Videos</a></li>
+                    <li><a href="Video.html">Videos</a></li>
                     <li><a href="Quiz.html">Quiz</a></li>
                 </ul>
             </div>
