--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="index1.html">ABOUT</a></li>
                     <li><a href="message.html">MathAi</a></li>
-                    <li><a href="Geometry.html">Videos</a></li>
+                    <li><a href="Video.html">Videos</a></li>
                     <li><a href="Quiz.html">Quiz</a></li>
                 </ul>
             </div>
