--- a/index1.html
+++ b/index1.html
@@ -22,6 +22,8 @@
             </div>
           <div class="search">
                 <input class="srch" type="search" name="" placeholder="Type To text">
+            <ul class ="dropdown">
+              <li><a href="index.html">Home</a></li>
                 <a href="index.html"><button class="btn">Search</button></a>
           </div>
            </div> 
