--- a/index1.html
+++ b/index1.html
@@ -27,6 +27,7 @@
             <ul class ="dropdown">
               <li><a href="index.html">Home</a></li>
             </ul>
+             <link rel="stylesheet" href="2.css">
                   
           </div>
            </div> 
