--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@
                 </ul>
             </div>
           <div class="search">
-                <input class="srch" type="search" name="" placeholder="Type To text">
+                <input class="srch" type="search" name="Home" placeholder="Type To text">
                 <a href="index.html"><button class="btn">Search</button></a>
                   
           </div>
