--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,7 @@
             </div>
           <div class="search">
                 <input class="srch" type="search" name="Home" placeholder="Type To text">
-                <a href="index.html"><a href="index1.html"><a href="message.html"> <button class="btn">Search</button></a>
+                <a href="index.html"><a href="index1.html"><a href="message.html"> <button class="btn">Search</button></a></a></a>
                   
           </div>
            </div> 
