--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
            </div> 
         <div class="content">
             <h1>Algebra & <br><span>Geometry Math</span> <br>Course</h1>
-            <p class="par">Algebra is a Course of a branch of mathematics that studies algebraic structures and the operations they use.
-            And Geometry<br> Learn About This,<br> You Can Access The Videos Tab On The Top Of The Webpage.
+            <p class="par">Algebra is a Course of a branch of mathematics that studies algebraic structures and the operations<br> they use.
+            And Geometry Learn About This, You Can Access The Videos Tab On The Top Of The Webpage.
             Once<br> You're Completed of The Videos U Learned
             ,<br> Go Access To The Quiz Tab, And Have A Good Day.</p>
 
