--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="content">
             <h1>Algebra & <br><span>Geometry Math</span> <br>Course</h1>
             <p class="par">Algebra is a Course of a branch of mathematics that studies algebraic structures and the operations<br> they use.
-            And Geometry Learn About This, You Can Access The Videos Tab On The Top Of The Webpage.<br>
-            Once<br> You're Completed of The Videos U Learned
+            And Geometry Learn About This, You Can Access The Videos Tab On The Top Of The Webpage.
+            Once You're Completed of The Videos U Learned
             ,<br> Go Access To The Quiz Tab, And Have A Good Day.</p>
 
                 <button class="cn"><a href="#">JOIN US</a></button>
