--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="content">
             <h1>Algebra & <br><span>Geometry Math</span> <br>Course</h1>
             <p class="par">Algebra is a Course of a branch of mathematics that studies algebraic structures and the operations<br> they use.
-            And Geometry Learn About This, You Can Access<br> The Videos Tab On The Top Of The Webpage.<br>
+            And Geometry is a  branch of mathematics that deals with shapes, angles,<br> dimensions and sizes of a variety of things Learn About This, You Can Access<br> The Videos Tab On The Top Of The Webpage.<br>
             Once You're Completed of The Videos U Learned
             ,<br> Go Access To The Quiz Tab, And Have A Good Day.</p>
 
