--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-google"></ion-icon></a>
+                        <a href="https://accounts.google.com/v3/signin/confirmidentifier?authuser=0&continue=https%3A%2F%2Faccounts.google.com%2F&followup=https%3A%2F%2Faccounts.google.com%2F&ifkv=AcMMx-ey4aqGTJjpSW5uGZRnPhDiakLN6y5sIZmF6JM6vVyAnudMO1OQWXITx6QlFODUuaBGym2Wtw&passive=1209600&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-81956180%3A1731135112316567&ddm=1"><ion-icon name="logo-google"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
                     </div>
 
