--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <dir="rtl">
 </head>
 <body background="https://png.pngtree.com/background/20210709/original/pngtree-fresh-math-background-picture-image_587824.jpg">
+ .navbar{
+			background: crimson; font-family: calibri; padding-right: 15px;padding-left: 15px;
+		}
+
  
  <link rel="stylesheet" href="2.css">
     <div class="main">
