--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
             <div class="icon">
                 <h2 class="logo">Prep 2</h2>
             </div>
+<style type="text/css">
+		*{
+			text-decoration: none;
+		}
+		.navbar{
+			background: crimson; font-family: calibri; padding-right: 15px;padding-left: 15px;
+		}
+		.navdiv{
+			display: flex; align-items: center; justify-content: space-between;
+		}
 
    <div class="menu">
                 <ul>
