--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-                        <a href="1074886961808-qjrmrr3aas38fjer6rc8nd8n1lg3vp73.apps.googleusercontent.com">hi<ion-icon name="logo-google"></ion-icon></a>
+                        <a href="#"><ion-icon name="logo-google"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
                     </div>
                           
