--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                         <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-                        <a href="index
-                         .html"><ion-icon name="logo-google"></ion-icon></a>
+                        <a href="index.html"><ion-icon name="logo-google"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
                     </div>
                           
