--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
                 </div>
         </div>
     </div>
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="scrupt.js"></script>
 </body>
 </html>
