--- a/message.html
+++ b/message.html
@@ -2,7 +2,8 @@
 <Head>
 <title> Message chatbot </title>
 </head>
-<body bgcolor="powderedblue" dir="ltr">
+<body>
+  <background = "body.png">
 <h2><a href="Prep.2.html">Home Page</a></h2>
 <center>
 <font face="Arial" color="blue"size="6">
