--- a/message.html
+++ b/message.html
@@ -3,6 +3,7 @@
 <title> Message chatbot </title>
 </head>
 <body>
+  <link rel="stylesheet" href="body.css">
   <background = "body.png">
 <h2><a href="Prep.2.html">Home Page</a></h2>
 <center>
