--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
           <div class="search">
                 <input class="srch" type="search" name="" placeholder="Type To text">
-                <a href="index1.html">ABOUT<button class="btn">Search</button></a>
-                <a href="index.html">HOME<button class="btn">Search</button></a>
+                <a href="index1.html"><button class="btn">Search</button></a>
+                <a href="index.html"><button class="btn">Search</button></a>
           </div>
            </div> 
         <div class="content">
