--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="index1.html">ABOUT</a></li>
-                    <li><a href="الرياضيات باللغة الإنجليزية.html">Test</a></li>
+                    <li><a href="الرياضيات باللغة الإنجليزية.html">Test4</a></li>
                     <li><a href="Video.html">Videos</a></li>
                     <li><a href="Quiz.html">Quiz</a></li>
                 </ul>
