--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="index1.html">ABOUT</a></li>
-                    <li><a href="الرياضيات باللغة الإنجليزية.html">Test4</a></li>
+                    <li><a href="الرياضيات باللغة الإنجليزية.html">Test</a></li>
                     <li><a href="Video.html">Videos</a></li>
                     <li><a href="Quiz.html">Quiz</a></li>
                 </ul>
             </div>
           <div class="search">
                 <input class="srch" type="search" name="" placeholder="Type To text">
-                <a href="index.html"><button class="btn">Search</button></a>
+                <a href="#"><button class="btn">Search</button></a>
           </div>
            </div> 
         <div class="content">
