Update الرياضيات باللغة الإنجليزية1 فديوهد.html

--- a/الرياضيات باللغة الإنجليزية1 فديوهد.html
+++ b/الرياضيات باللغة الإنجليزية1 فديوهد.html
@@ -19,7 +19,7 @@
  					 <tbody>
    					
    				 <tr>
-					 <th dir="rtl" scope="row" height="10" align="center" valign="middle"><p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px"> التقييمات والأداءات الصفية والمنزلية _ الرياضيات باللغة الإنجليزية _ للصف الثانى الإعدادي _ الفصل الدراسي  الثاني _ للعام الدراسي 2024/2025</p></th>
+					 <th dir="rtl" scope="row" height="10" align="center" valign="middle"><p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px"> افيديو والأداءات الصفية والمنزلية _ الرياضيات باللغة الإنجليزية _ للصف الثانى الإعدادي _ الفصل الدراسي  الثاني _ للعام الدراسي 2024/2025</p></th>
    					 </tr>
   					</tbody>
 					</table>
@@ -40,7 +40,7 @@
 								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية1_files/Button.png"><a href="https://elearnningcontent.blob.core.windows.net/elearnningcontent/content/2025/Prepratory/Prepratory2/Term2/Streem/Math_English%20_Prep2_TR1_C_W%201.pdf" target="_blank">الأداء الصفي</a></td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية1_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية1_files/Asset 2.png" alt=""></td>
 								 	<td align="center" width="10" height="73" scope="col">&nbsp;</td>
-								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية1_files/Button.png">الأسبوع الأول&nbsp;</td>
+								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية1_files/Button.png">Factorizing quadratic trinomial&nbsp;</td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية1_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية1_files/Asset 2.png" alt=""></td>
 								</tr>
 								<tr>
