--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="index1.html">ABOUT</a></li>
                     <li><a href="الرياضيات باللغة الإنجليزية.html">Test</a></li>
-                    <li><a href="الرياضيات باللغة الإنجليزية1.html">Videos</a></li>
+                    <li><a href="الرياضيات باللغة الإنجليزية1 فديوهد.html">Videos</a></li>
                     <li><a href="Quiz.html">Quiz</a></li>
                 </ul>
             </div>
