Update الرياضيات باللغة الإنجليزية video.html

--- a/الرياضيات باللغة الإنجليزية video.html
+++ b/الرياضيات باللغة الإنجليزية video.html
@@ -40,7 +40,7 @@
 								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png"><a href="https://elearnningcontent.blob.core.windows.net/elearnningcontent/content/2025/Prepratory/Prepratory2/Term2/Streem/Math_English%20_Prep2_TR1_C_W%201.pdf" target="_blank">الأداء الصفي</a></td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 								 	<td align="center" width="10" height="73" scope="col">&nbsp;</td>
-								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png">Factorizing quadratic trinomial&nbsp;</td>
+								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png">Factorizing quadratic trinomial, Areas of two parallelograms, and Corollaries on theorem (1)&nbsp;</td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 								</tr>
 								<tr>
