--- a/newvideo.html
+++ b/newvideo.html
@@ -38,10 +38,10 @@
 &nbsp;&nbsp;&nbsp;&nbsp;
 </div>
 
-<p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Equality of the areas of two parallelogram</p> 
+<p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Equality of the areas of two parallelogram</p
 
 <div>
-<video controls autoplay muted loop src="Prep2- 2nd term  4.1- Equality of the areas of two parallelogram  شرح ماث ثانيه إعدادى لغات.mp4" width="700" align="left">
+<a href="https://www.youtube.com/watch?v=2-JoIzTMNH8&list=PLyh9KisdwfnkwHPqqh5Br8ZU0JVxuy6Gc&index=1"
 </div>
 
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Follow : Corollaries on theorem (1)</p> 
@@ -54,3 +54,5 @@
   								<tbody>
   </tr>
 								<td dir="rtl" align="center" width="229" height="73" scope="col" 
+
+	
