--- a/newvideo.html
+++ b/newvideo.html
@@ -40,6 +40,7 @@
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Equality of the areas of two parallelogram</p
 
 <div>
+<video height="700" controls>
 <source controls autoplay muted loop src="Factorizing quadratic trinomial X^2+bX+C شرح ماث ثانيه إعدادى لغات.mp4" width="700" align="left" type="video/mp4">
 </div>
 
