--- a/newvideo.html
+++ b/newvideo.html
@@ -34,19 +34,19 @@
 				  				<table width="1250" height="365" border="0" cellspacing="0" cellpadding="0" bordercolor="#00DB1F" align="center">
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px"> Factorizing quadratic trinomial X^2+bX+C</p> 
 <div class="scroll-bar">
-<video controls autoplay muted loop src="Factorizing quadratic trinomial X^2+bX+C شرح ماث ثانيه إعدادى لغات.mp4" width="700" align="left">
+<a href="https://www.youtube.com/watch?v=2-JoIzTMNH8&list=PLyh9KisdwfnkwHPqqh5Br8ZU0JVxuy6Gc&index=1" width="700" align="left">
 </div>
 
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Equality of the areas of two parallelogram</p
 
 <div>
-<a href="https://www.youtube.com/watch?v=2-JoIzTMNH8&list=PLyh9KisdwfnkwHPqqh5Br8ZU0JVxuy6Gc&index=1" width="700" align="left">
+<a href="https://www.youtube.com/watch?v=T_vaWyUTFf4&t=1654s" width="700" align="left">
 </div>
 
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Follow : Corollaries on theorem (1)</p> 
 
 <div>
-<video controls autoplay muted loop src="Prep2- 2nd term  4.2- Follow _ Corollaries on theorem (1)  شرح ماث ثانيه إعدادى لغات.mp4" width="700" align="left">
+<a href="https://www.youtube.com/watch?v=Vi6J29HC1IQ&t=2049s" width="700" align="left">
 </div>
 
 
