--- a/newvideo.html
+++ b/newvideo.html
@@ -44,6 +44,7 @@
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Equality of the areas of two parallelogram</p
 
 <div>
+<a href="https://www.youtube.com/watch?v=T_vaWyUTFf4&t=1654s" width="700">
 </div>
 
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Follow : Corollaries on theorem (1)</p> 
