--- a/newvideo.html
+++ b/newvideo.html
@@ -30,7 +30,7 @@
 			  </th>
     		  </tr>
     		  <tr>
-     		  <th scope="row">                              <a href="https://www.youtube.com/watch?v=2-JoIzTMNH8&list=PLyh9KisdwfnkwHPqqh5Br8ZU0JVxuy6Gc&index=1" width="700">
+     		  <th scope="row">
 
 				  				<table width="1250" height="365" border="0" cellspacing="0" cellpadding="0" bordercolor="#00DB1F" align="center">
 									
