--- a/newvideo.html
+++ b/newvideo.html
@@ -35,8 +35,8 @@
 				  				<table width="1250" height="365" border="0" cellspacing="0" cellpadding="0" bordercolor="#00DB1F" align="center">
 									
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px"> Factorizing quadratic trinomial X^2+bX+C</p> 
-<div class="scroll-bar">                        
-<video controls autoplay muted loop src="Prep2- 2nd term  1- Factorizing quadratic trinomial X^2+bX+C شرح ماث ثانيه إعدادى لغات.mp4" width="700" align="left">
+<div class="scroll-bar">   
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2-JoIzTMNH8?si=-_OUpex2iEUYpAOx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Equality of the areas of two parallelogram</p>
