--- a/newvideo.html
+++ b/newvideo.html
@@ -35,19 +35,24 @@
 				  				<table width="1250" height="365" border="0" cellspacing="0" cellpadding="0" bordercolor="#00DB1F" align="center">
 									
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px"> Factorizing quadratic trinomial X^2+bX+C</p> 
-<div class="scroll-bar">   
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2-JoIzTMNH8?si=-_OUpex2iEUYpAOx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Equality of the areas of two parallelogram</p>
-<div>
-<a href="https://www.youtube.com/watch?v=M6ArqFnQE7o&list=PLyh9KisdwfnkwHPqqh5Br8ZU0JVxuy6Gc&index=4" width="700">
-</div>
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Follow : Corollaries on theorem (1)</p> 
-<div>
-<a href="https://www.youtube.com/watch?v=M6ArqFnQE7o&list=PLyh9KisdwfnkwHPqqh5Br8ZU0JVxuy6Gc&index=4" width="700"</a>
-</div>
 
+									<!-- Video Section -->
+    <div class="video-container">
+        <video controls>
+            <source src="Factorizing quadratic trinomial X^2+bX+C شرح ماث ثانيه إعدادى لغات.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <video controls>
+            <source src="video2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <video controls>
+            <source src="video3.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
 
   								<tbody>
   </tr>
