--- a/newvideo.html
+++ b/newvideo.html
@@ -45,11 +45,11 @@
             Your browser does not support the video tag.
         </video>
         <video controls>
-            <source src="video2.mp4" type="video/mp4">
+            <source src="Equality of the areas of two parallelogram  شرح ماث ثانيه إعدادى لغات.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <video controls>
-            <source src="video3.mp4" type="video/mp4">
+            <source src="Follow _ Corollaries on theorem (1)" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
