--- a/newvideo.html
+++ b/newvideo.html
@@ -45,11 +45,11 @@
             Your browser does not support the video tag.
         </video>
         <video controls>
-            <source src="Equality of the areas of two parallelogram شرح ماث ثانيه إعدادى لغات.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <video controls>
-            <source src="Follow _ Corollaries on theorem (1).mp4" type="video/mp4">
+            <source src="Video1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
