--- a/newvideo.html
+++ b/newvideo.html
@@ -38,21 +38,13 @@
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Equality of the areas of two parallelogram</p>
 <p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px">Follow : Corollaries on theorem (1)</p> 
 
-									<!-- Video Section -->
+ <!-- Embedded YouTube Videos -->
     <div class="video-container">
-        <video controls>
-            <source src="Factorizing quadratic trinomial X^2+bX+C شرح ماث ثانيه إعدادى لغات.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <video controls>
-            <source src="video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <video controls>
-            <source src="Video1.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <iframe src="https://www.youtube.com/embed/2-JoIzTMNH8?si=GqU9uXZnKPnK_E5H" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/T_vaWyUTFf4?si=X89eIATbDhoEsMO0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/Vi6J29HC1IQ?si=0FNsKypWJQjBdh1A" allowfullscreen></iframe>
     </div>
+
 
   								<tbody>
   </tr>
