Update الرياضيات باللغة الإنجليزية video.html

--- a/الرياضيات باللغة الإنجليزية video.html
+++ b/الرياضيات باللغة الإنجليزية video.html
@@ -31,7 +31,7 @@
 				  				<table width="1250" height="365" border="0" cellspacing="0" cellpadding="0" bordercolor="#00DB1F" align="center">
   								<tbody>
 						<tr>
-								<td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png"><a href="newvideo.html" target= "_blank">فيديو</a></td>
+								<td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png"><a href="newvideo2.html" target= "_blank">فيديو</a></td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 						       	<td dir="rtl" align="center" width="10" height="73" scope="col">&nbsp;</td>
 								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png"><a href="https://elearnningcontent.blob.core.windows.net/elearnningcontent/content/2025/Prepratory/Prepratory2/Term2/Streem/Math_English%20_Prep2_TR1_H_W%201.pdf" target="_blank">الأداء المنزلي</a></td>
