--- a/newvideo2.html
+++ b/newvideo2.html
@@ -55,5 +55,10 @@
         <iframe src="https://www.youtube.com/embed/Vi6J29HC1IQ?si=0FNsKypWJQjBdh1A" allowfullscreen></iframe>
     </div>
 
+    <p class="header">Factorizing quadratic trinomial in the form aX2 + bX + c.</p> 
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/M6ArqFnQE7o?si=NEW_VIDEO_ID" allowfullscreen></iframe>
+    </div>
+
 </body>
 </html>
