--- a/newvideo3.html
+++ b/newvideo3.html
@@ -47,7 +47,7 @@
 
     <p class="header">Factorizing perfect square trinomial</p> 
     <div class="video-container">
-        <iframe src="https://www.youtube.com/watch?v=sOwe21G7Ge0&t=1630s" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/sOwe21G7Ge0?si=NEW_VIDEO_ID" allowfullscreen></iframe>
     </div>
 
 </body>
