--- a/الرياضيات باللغة الإنجليزية video.html
+++ b/الرياضيات باللغة الإنجليزية video.html
@@ -57,7 +57,7 @@
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 								</tr>
 								<tr>
-								<td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png"><a href="https://elearnningcontent.blob.core.windows.net/elearnningcontent/content/2025/Prepratory/Prepratory2/Term2/Streem/Math%20English%20-%20Prep%202%20-%20TR2%20-%20T%20-%20W3.pdf" target="_blank">التقييم الأسبوعي</a></td>
+								<td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png"><a href="newvideo4.html" target="_blank">فيديو</a></td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 						       	<td align="center" width="10" height="73" scope="col">&nbsp;</td>
 								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png"><a href="https://elearnningcontent.blob.core.windows.net/elearnningcontent/content/2025/Prepratory/Prepratory2/Term2/Streem/Math%20English%20-%20Prep%202%20-%20TR2%20-%20H%20-%20W3.pdf" target="_blank">الأداء المنزلي</a></td>
@@ -66,7 +66,8 @@
 								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png"><a href="https://elearnningcontent.blob.core.windows.net/elearnningcontent/content/2025/Prepratory/Prepratory2/Term2/Streem/Math%20English%20-%20Prep%202%20-%20TR2%20-%20C%20-%20W3.pdf" target="_blank">الأداء الصفي</a></td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 								 	<td align="center" width="10" height="73" scope="col">&nbsp;</td>
-								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png">الأسبوع الثالث</td>
+								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png">Factorizing the difference of two squares, Factorizing the sum and difference of two cubes
+ and Equality of the areas of two triangles (Theorem “2”)</td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 								</tr>
 								<tr>
