Update الرياضيات باللغة الإنجليزية video.html

--- a/الرياضيات باللغة الإنجليزية video.html
+++ b/الرياضيات باللغة الإنجليزية video.html
@@ -67,7 +67,7 @@
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 								 	<td align="center" width="10" height="73" scope="col">&nbsp;</td>
 								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png">Factorizing the difference of two squares, Factorizing the sum and difference of two cubes
- and Equality of the areas of two triangles (Theorem “2”)</td>
+ and Equality of the areas of two triangles</td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 								</tr>
 								<tr>
