--- a/newvideo4.html
+++ b/newvideo4.html
@@ -56,5 +56,10 @@
         <iframe src="https://www.youtube.com/embed/-EA0V34f4OM" allowfullscreen></iframe>
     </div>
 
+      <p class="header">Follow: Equality of the areas of two triangles</p> 
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/MOKtYFQbsEg" allowfullscreen></iframe>
+  </div>
+
 </body>
 </html>
