--- a/newvideo7.html
+++ b/newvideo7.html
@@ -45,5 +45,10 @@
         <iframe src="https://www.youtube.com/embed/HGOOMSLqtOI" allowfullscreen></iframe>
     </div>
 
+   <p class="header">General Exercises on unit 4"</p> 
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/zVHBcsXK70o" allowfullscreen></iframe>
+    </div>
+
 </body>
 </html>
