Update الرياضيات باللغة الإنجليزية video.html

--- a/الرياضيات باللغة الإنجليزية video.html
+++ b/الرياضيات باللغة الإنجليزية video.html
@@ -19,7 +19,7 @@
  					 <tbody>
    					
    				 <tr>
-					 <th dir="rtl" scope="row" height="10" align="center" valign="middle"><p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px"> التقييمات والأداءات الصفية والمنزلية _ الرياضيات باللغة الإنجليزية _ للصف الثانى الإعدادي _ الفصل الدراسي  الثاني _ للعام الدراسي 2024/2025</p></th>
+					 <th dir="rtl" scope="row" height="10" align="center" valign="middle"><p style="text-align:center ; direction: rtl; font-size:24px ; background-color: #7E0E3E; border: thick; color:#FFFFFF ; border: #000000 ;  border-radius: 50px 20px; padding: 10px 30px 10px 10px"> فيديوهات والأداءات الصفية والمنزلية _ الرياضيات باللغة الإنجليزية _ للصف الثانى الإعدادي _ الفصل الدراسي  الثاني _ للعام الدراسي 2024/2025</p></th>
    					 </tr>
   					</tbody>
 					</table>
