--- a/الرياضيات باللغة الإنجليزية video.html
+++ b/الرياضيات باللغة الإنجليزية video.html
@@ -3,6 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title> الرياضيات باللغة الإنجليزية</title>
+<link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
