Update الرياضيات باللغة الإنجليزية.html

--- a/الرياضيات باللغة الإنجليزية.html
+++ b/الرياضيات باللغة الإنجليزية.html
@@ -151,7 +151,7 @@
 
 
 
-								<td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية_files/Button.png">التقييم الأسبوعي</td>
+					                	<td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية_files/Button.png"><a href="https://elearnningcontent.blob.core.windows.net/elearnningcontent/content/2025/Prepratory/Prepratory2/Term2/Streem/Math%20English%20-%20Prep2%20-%20TR2%20-%20C%20-%20W%2010.pdf" target="_blank">التقييم الأسبوعي</a></td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية_files/Asset 2.png" alt=""></td>
 						       	<td align="center" width="10" height="73" scope="col">&nbsp;</td>
 								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية_files/Button.png">الأداء المنزلي</td>
